@@ -1632,13 +1632,22 @@ Example  : cast light\n\r\
 This spell evokes a bright light above the head of the caster.  The light follows \
 the caster wherever he or she goes, allowing the caster to see in dark places.
 
+SPELL_LIGHTBLINDNESS=SPELL_LIGHT_BLINDNESS
+SPELL_LIGHT_BLINDNESS=<ABILITY>\
+Usage    : CAST LIGHT BLINDNESS [TARGET NAME] \n\r\
+Example  : cast "light blindness" orc\n\r\
+If successful, this spell makes the target hyper sensitive to light.  \
+In dark areas, the target is able to see clearly, but is blinded in well lit \
+areas.
+
 SPELL_LIGHTSENSITIVITY=SPELL_LIGHT_SENSITIVITY
 SPELL_LIGHT_SENSITIVITY=<ABILITY>\
 Usage    : CAST LIGHT SENSITIVITY [TARGET NAME] \n\r\
 Example  : cast "light sensitivity" orc\n\r\
-If successful, this spell makes the target extremely sensitive to the light.  \
-In dark areas, the target is able to see clearly, but is blinded in well lit \
-areas.
+If successful, this spell makes the target sensitive to the light.  \
+In dark areas, the target is able to see clearly, but has lower attack \
+and defense skill in well lit areas, as well as being unable to examine \
+things closely.
 
 SPELL_LIGHTENITEM=SPELL_LIGHTEN_ITEM
 SPELL_LIGHTEN_ITEM=<ABILITY>\
