@@ -16,7 +16,7 @@
   15. New LIST COMMANDJOURNALS
   16. Shipwright has all new recipes with new wonders to behold.
   17. REPORT command can now report expertises and languages also.
-  18. New Spells: Conjure Ammunition, Harden Bullets
+  18. New Spells: Conjure Ammunition, Harden Bullets, Light Blindness
   19. ZapperMask now supports +-ACCOUNTS
   20. New Prayer: Mass Forgive
   21. New common skills: Legendary Weaponsmithing
@@ -25,6 +25,7 @@
   24. ShapeShift forms 6-11 added, and shapeshift now governed by skills/shapeshift.txt
   25. New Race flag: infatigueable -- prevents fatigue, given to undead and golems.
   26. New standard Race: Flesh Golem
+  27. Light Sensitivity (Drow racial trait) is now less onerous.
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
